JEKT-1209 Added TSPAT and INOB lookup 🔁 Modified     - Pipeline        - SAP_MD_MATL_HM2     - Dataset        - DS_SAP_01_TSPAT

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1711,9 +1711,10 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-28 09:03:25'
-    modifiedAt: '2023-04-30 06:36:41'
+    modifiedAt: '2023-04-30 07:56:06'
     datasets:
       inputs:
+      - datasets/DS_SAP_01_TSPAT
       - datasets/DS_SAP_AUSP_01
       - datasets/DS_SAP_CABN_01
       - datasets/DS_SAP_INOB_01
@@ -5000,7 +5001,7 @@ datasets:
     description: ''
     author: jcovezd1@its.jnj.com
     createdAt: '2023-03-20 12:13:46'
-    modifiedAt: '2023-04-13 15:09:44'
+    modifiedAt: '2023-04-30 07:55:21'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
