--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1711,9 +1711,10 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-28 09:03:25'
-    modifiedAt: '2023-04-30 07:56:06'
+    modifiedAt: '2023-05-01 08:27:42'
     datasets:
       inputs:
+      - datasets/DS_SAP_01_T006A
       - datasets/DS_SAP_01_TSPAT
       - datasets/DS_SAP_AUSP_01
       - datasets/DS_SAP_CABN_01
@@ -6399,6 +6400,21 @@ datasets:
         author: natkins7@its.jnj.com
         createdAt: '2023-04-28 16:09:56'
         modifiedAt: '2023-04-28 16:09:56'
+  datasets/DS_SAP_01_T006A:
+    name: DS_SAP_01_T006A
+    description: ''
+    author: natkins7@its.jnj.com
+    createdAt: '2023-05-01 08:26:23'
+    modifiedAt: '2023-05-01 08:26:23'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: natkins7@its.jnj.com
+        createdAt: '2023-05-01 08:26:23'
+        modifiedAt: '2023-05-01 08:26:23'
 templates: {}
 jobs:
   jobs/JOB_MD_SER_NUM_STOCK_SGMNT:
