JEKT-1209 New CANT lookup ❇️ New     - Dataset        - DS_SAP_01_CAWNT
🔁 Modified
    - Pipeline
       - SAP_MD_MATL_HM2
    - Dataset
       - DS_SAP_01_T006A

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1711,9 +1711,10 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-28 09:03:25'
-    modifiedAt: '2023-05-01 08:27:42'
+    modifiedAt: '2023-05-01 09:51:40'
     datasets:
       inputs:
+      - datasets/DS_SAP_01_CAWNT
       - datasets/DS_SAP_01_T006A
       - datasets/DS_SAP_01_TSPAT
       - datasets/DS_SAP_AUSP_01
@@ -6405,7 +6406,7 @@ datasets:
     description: ''
     author: natkins7@its.jnj.com
     createdAt: '2023-05-01 08:26:23'
-    modifiedAt: '2023-05-01 08:26:23'
+    modifiedAt: '2023-05-01 08:34:21'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -6415,6 +6416,21 @@ datasets:
         author: natkins7@its.jnj.com
         createdAt: '2023-05-01 08:26:23'
         modifiedAt: '2023-05-01 08:26:23'
+  datasets/DS_SAP_01_CAWNT:
+    name: DS_SAP_01_CAWNT
+    description: ''
+    author: natkins7@its.jnj.com
+    createdAt: '2023-05-01 08:36:34'
+    modifiedAt: '2023-05-01 08:36:52'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: natkins7@its.jnj.com
+        createdAt: '2023-05-01 08:36:34'
+        modifiedAt: '2023-05-01 08:36:34'
 templates: {}
 jobs:
   jobs/JOB_MD_SER_NUM_STOCK_SGMNT:
