--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1622,14 +1622,14 @@ pipelines:
     subgraphs: []
     dependencies: {}
   pipelines/SAP_01_MD_CUST:
-    name: SAP_01_MD_CUST
+    name: SAP_01_MD_CUST_MRS_
     description: ''
     author: hgermi1@its.jnj.com
     mode: batch
     artefactID: ''
     language: python
     createdAt: '2023-04-15 17:35:18'
-    modifiedAt: '2023-04-30 03:13:17'
+    modifiedAt: '2023-05-01 11:33:16'
     datasets:
       inputs:
       - datasets/DS_SAP_01_KNA1
@@ -1640,14 +1640,14 @@ pipelines:
     subgraphs: []
     dependencies: {}
   pipelines/SAP_01_MD_SHIP_SVS:
-    name: SAP_01_MD_CUST_SVS
+    name: SAP_01_MD_CUST_HMD_HM2
     description: ''
     author: hgermi1@its.jnj.com
     mode: batch
     artefactID: ''
     language: python
     createdAt: '2023-04-18 01:51:03'
-    modifiedAt: '2023-04-20 15:44:50'
+    modifiedAt: '2023-05-01 11:30:11'
     datasets:
       inputs:
       - datasets/DS_SAP_01_T016T
