--- a/src/datasets/MD_CUST/pbt_aspects.yml
+++ b/src/datasets/MD_CUST/pbt_aspects.yml
@@ -352,6 +352,13 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: DESC_INDSTR_KEY
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: FST_PHN_NUM
     type: string
     nullable: true
