--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1647,12 +1647,14 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-18 01:51:03'
-    modifiedAt: '2023-05-01 11:30:11'
+    modifiedAt: '2023-05-01 11:41:32'
     datasets:
       inputs:
       - datasets/DS_SAP_01_T016T
       - datasets/DS_SAP_01_TVAST
-      outputs: []
+      - datasets/DS_SAP_03_KNA1
+      outputs:
+      - datasets/MD_CUST
     subgraphs: []
     dependencies: {}
   pipelines/SAP_01_MD_CUST_HCS:
@@ -2189,7 +2191,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-04-30 16:59:06'
+    modifiedAt: '2023-05-01 11:36:13'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -6362,6 +6364,21 @@ datasets:
         author: hgermi1@its.jnj.com
         createdAt: '2023-04-26 13:37:39'
         modifiedAt: '2023-04-26 13:37:39'
+  datasets/DS_SAP_03_KNA1:
+    name: DS_SAP_03_KNA1
+    description: ''
+    author: hgermi1@its.jnj.com
+    createdAt: '2023-05-01 11:40:16'
+    modifiedAt: '2023-05-01 11:40:16'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: hgermi1@its.jnj.com
+        createdAt: '2023-05-01 11:40:16'
+        modifiedAt: '2023-05-01 11:40:16'
 templates: {}
 jobs:
   jobs/JOB_MD_SER_NUM_STOCK_SGMNT:
