JEKT-1351 🔁 Created config settings for BBN_P01_HCS_TAI_BBL_GEU_MBP_FSN_MRS_HM2_HMD     - Pipeline        - SAP_MD_CRNCY_BBN_P01_HCS_TAI_BBL_GEU_MBP_FSN_MRS_HM2_HMD

--- a/src/pipelines/SAP_MD_CRNCY_BBN_P01_HCS_TAI_BBL_GEU_MBP_FSN_MRS_HM2/pbt_aspects.yml
+++ b/src/pipelines/SAP_MD_CRNCY_BBN_P01_HCS_TAI_BBL_GEU_MBP_FSN_MRS_HM2/pbt_aspects.yml
@@ -1,4 +1,15 @@
 version: 1
 configurations:
+- GEU
+- FSN
+- MBP
+- BBL
+- HMD
+- P01
+- MRS
 - default
+- HCS
+- HM2
+- BBN
+- TAI
 dependencies: []
