JEKT-1209 New data fromt T023T and LU gem ❇️ New     - Dataset        - DS_SAP_01_T023T
🔁 Modified
    - Pipeline
       - SAP_MD_MATL_HM2

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1711,11 +1711,12 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-28 09:03:25'
-    modifiedAt: '2023-05-01 11:49:31'
+    modifiedAt: '2023-05-01 12:02:13'
     datasets:
       inputs:
       - datasets/DS_SAP_01_CAWNT
       - datasets/DS_SAP_01_T006A
+      - datasets/DS_SAP_01_T023T
       - datasets/DS_SAP_01_TSPAT
       - datasets/DS_SAP_AUSP_01
       - datasets/DS_SAP_CABN_01
@@ -6431,6 +6432,21 @@ datasets:
         author: natkins7@its.jnj.com
         createdAt: '2023-05-01 08:36:34'
         modifiedAt: '2023-05-01 08:36:34'
+  datasets/DS_SAP_01_T023T:
+    name: DS_SAP_01_T023T
+    description: ''
+    author: natkins7@its.jnj.com
+    createdAt: '2023-05-01 11:58:13'
+    modifiedAt: '2023-05-01 11:58:38'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: natkins7@its.jnj.com
+        createdAt: '2023-05-01 11:58:13'
+        modifiedAt: '2023-05-01 11:58:13'
 templates: {}
 jobs:
   jobs/JOB_MD_SER_NUM_STOCK_SGMNT:
