JEKT-1351 ❇️ New     - Dataset        - DS_SAP_01_TCURC
🔁 Modified
    - Pipeline
       - SAP_MD_CRNCY_BBN_P01_HCS_TAI_BBL_GEU_MBP_FSN_MRS_HM2_HMD

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1728,9 +1728,10 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-05-01 11:16:03'
-    modifiedAt: '2023-05-01 12:07:37'
+    modifiedAt: '2023-05-01 12:35:51'
     datasets:
-      inputs: []
+      inputs:
+      - datasets/DS_SAP_01_TCURC
       outputs: []
     subgraphs: []
     dependencies: {}
@@ -6400,6 +6401,21 @@ datasets:
         author: hgermi1@its.jnj.com
         createdAt: '2023-04-13 02:19:30'
         modifiedAt: '2023-04-13 02:19:30'
+  datasets/DS_SAP_01_TCURC:
+    name: DS_SAP_01_TCURC
+    description: ''
+    author: jcovezd1@its.jnj.com
+    createdAt: '2023-05-01 12:35:50'
+    modifiedAt: '2023-05-01 12:35:50'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: jcovezd1@its.jnj.com
+        createdAt: '2023-05-01 12:35:50'
+        modifiedAt: '2023-05-01 12:35:50'
 templates: {}
 jobs:
   jobs/JOB_MD_SER_NUM_STOCK_SGMNT:
