JEKT-1351❇️ New     - Dataset        - DS_SAP_01_TCURX
🔁 Modified
    - Pipeline
       - SAP_MD_CRNCY_BBN_P01_HCS_TAI_BBL_GEU_MBP_FSN_MRS_HM2_HMD

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1728,10 +1728,11 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-05-01 11:16:03'
-    modifiedAt: '2023-05-01 12:35:51'
+    modifiedAt: '2023-05-01 12:39:05'
     datasets:
       inputs:
       - datasets/DS_SAP_01_TCURC
+      - datasets/DS_SAP_01_TCURX
       outputs: []
     subgraphs: []
     dependencies: {}
@@ -6416,6 +6417,21 @@ datasets:
         author: jcovezd1@its.jnj.com
         createdAt: '2023-05-01 12:35:50'
         modifiedAt: '2023-05-01 12:35:50'
+  datasets/DS_SAP_01_TCURX:
+    name: DS_SAP_01_TCURX
+    description: ''
+    author: jcovezd1@its.jnj.com
+    createdAt: '2023-05-01 12:39:04'
+    modifiedAt: '2023-05-01 12:39:04'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: jcovezd1@its.jnj.com
+        createdAt: '2023-05-01 12:39:04'
+        modifiedAt: '2023-05-01 12:39:04'
 templates: {}
 jobs:
   jobs/JOB_MD_SER_NUM_STOCK_SGMNT:
