JEKT-1395 🔁 Modified     - Pipeline        - JDE_01_MD_SLS_ORDR_BW2_GMD_JET_JSW_DEU_MTR_SJD_DJD_JEM_JES

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1711,7 +1711,7 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-27 15:31:54'
-    modifiedAt: '2023-04-27 17:43:27'
+    modifiedAt: '2023-05-01 12:54:30'
     datasets:
       inputs:
       - datasets/DS_JDE_01_F4201
@@ -7532,6 +7532,10 @@ functions:
   expressions: {}
 subgraphs: {}
 sqlModels: {}
+sqlMacros: {}
+sqlSeeds: {}
+sqlSources: {}
+sqlUnreferencedSources: {}
 sqlPipeline: null
 dependencies: []
 projectDependencies: {}
