--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1711,11 +1711,12 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-27 15:31:54'
-    modifiedAt: '2023-05-01 12:54:30'
+    modifiedAt: '2023-05-01 13:12:44'
     datasets:
       inputs:
       - datasets/DS_JDE_01_F4201
-      outputs: []
+      outputs:
+      - datasets/MD_SLS_ORDR
     subgraphs: []
     dependencies: {}
 datasets:
@@ -1859,7 +1860,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-03-20 18:20:04'
+    modifiedAt: '2023-05-01 13:09:46'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
