--- a/src/pipelines/JDE_01_MD_SLS_ORDR_BW2_GMD_JET_JSW_DEU_MTR_SJD_DJD_JEM_JES/pbt_aspects.yml
+++ b/src/pipelines/JDE_01_MD_SLS_ORDR_BW2_GMD_JET_JSW_DEU_MTR_SJD_DJD_JEM_JES/pbt_aspects.yml
@@ -1,5 +1,14 @@
 version: 1
 configurations:
-- default
+- DJD
+- MTR
+- JET
+- JES
 - BW2
+- SJD
+- default
+- GMD
+- JSW
+- JEM
+- DEU
 dependencies: []
