--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1728,12 +1728,13 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-05-01 11:16:03'
-    modifiedAt: '2023-05-01 15:30:39'
+    modifiedAt: '2023-05-01 15:33:37'
     datasets:
       inputs:
       - datasets/DS_SAP_01_TCURC
       - datasets/DS_SAP_01_TCURX
-      outputs: []
+      outputs:
+      - datasets/MD_CRNCY
     subgraphs: []
     dependencies: {}
 datasets:
@@ -1937,7 +1938,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-03-20 18:20:04'
+    modifiedAt: '2023-05-01 15:33:36'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
