JEKT-1351 ❇️ New     - Pipeline        - SAP_MD_CRNCY_SVS_BWI_ATL
🔁 Modified
    - Dataset
       - DS_SAP_01_TCURC

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1737,6 +1737,22 @@ pipelines:
       - datasets/MD_CRNCY
     subgraphs: []
     dependencies: {}
+  pipelines/SAP_MD_CRNCY_SVS_BWI_ATL:
+    name: SAP_MD_CRNCY_SVS_BWI_ATL
+    description: ''
+    author: jcovezd1@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-05-01 16:43:12'
+    modifiedAt: '2023-05-01 16:54:08'
+    datasets:
+      inputs:
+      - datasets/DS_SAP_01_TCURC
+      outputs:
+      - datasets/MD_CRNCY
+    subgraphs: []
+    dependencies: {}
 datasets:
   datasets/MD_HU_SER:
     name: MD_HU_SER
@@ -6408,7 +6424,7 @@ datasets:
     description: ''
     author: jcovezd1@its.jnj.com
     createdAt: '2023-05-01 12:35:50'
-    modifiedAt: '2023-05-01 15:35:09'
+    modifiedAt: '2023-05-01 16:50:13'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
