--- a/src/datasets/DS_SAP_01_TCURC/pbt_aspects.yml
+++ b/src/datasets/DS_SAP_01_TCURC/pbt_aspects.yml
@@ -2,7 +2,7 @@ version: 1
 schema:
   type: struct
   fields:
-  - name: MANDT
+  - name: _deleted_
     type: string
     nullable: true
     metadata:
@@ -10,6 +10,13 @@ schema:
       mappings: []
       tags: []
   - name: WAERS
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: MANDT
     type: string
     nullable: true
     metadata:
@@ -79,7 +86,7 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: _deleted_
+  - name: _infa_bigint_sequence_
     type: string
     nullable: true
     metadata:
