--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1057,13 +1057,14 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-28 20:12:25'
-    modifiedAt: '2023-04-28 21:21:32'
+    modifiedAt: '2023-05-01 16:44:56'
     datasets:
       inputs:
       - datasets/DS_SAP_01_T006
       - datasets/DS_SAP_01_T006A
       - datasets/DS_SAP_01_T006T
-      outputs: []
+      outputs:
+      - datasets/MD_MATL_UOM
     subgraphs: []
     dependencies: {}
 datasets:
@@ -2392,7 +2393,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-03-20 18:20:04'
+    modifiedAt: '2023-05-01 16:17:44'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -5856,6 +5857,10 @@ functions:
   expressions: {}
 subgraphs: {}
 sqlModels: {}
+sqlMacros: {}
+sqlSeeds: {}
+sqlSources: {}
+sqlUnreferencedSources: {}
 sqlPipeline: null
 dependencies: []
 projectDependencies: {}
