JEKT-1351❇️ New     - Pipeline        - JDE_MD_CRNCY_BW2_DEU_DJD_GMD_JET_JEM_JES_JSW_SJD

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1753,6 +1753,20 @@ pipelines:
       - datasets/MD_CRNCY
     subgraphs: []
     dependencies: {}
+  pipelines/JDE_MD_CRNCY_BW2_DEU_DJD_GMD_JET_JEM_JES_JSW_SJD:
+    name: JDE_MD_CRNCY_BW2_DEU_DJD_GMD_JET_JEM_JES_JSW_SJD
+    description: ''
+    author: jcovezd1@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-05-01 17:14:53'
+    modifiedAt: '2023-05-01 17:21:52'
+    datasets:
+      inputs: []
+      outputs: []
+    subgraphs: []
+    dependencies: {}
 datasets:
   datasets/MD_HU_SER:
     name: MD_HU_SER
