--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1761,9 +1761,10 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-05-01 17:14:53'
-    modifiedAt: '2023-05-01 17:21:52'
+    modifiedAt: '2023-05-01 17:25:08'
     datasets:
-      inputs: []
+      inputs:
+      - datasets/DS_JDE_01_F0013
       outputs: []
     subgraphs: []
     dependencies: {}
@@ -6463,6 +6464,21 @@ datasets:
         author: jcovezd1@its.jnj.com
         createdAt: '2023-05-01 12:39:04'
         modifiedAt: '2023-05-01 12:39:04'
+  datasets/DS_JDE_01_F0013:
+    name: DS_JDE_01_F0013
+    description: ''
+    author: jcovezd1@its.jnj.com
+    createdAt: '2023-05-01 17:25:07'
+    modifiedAt: '2023-05-01 17:25:07'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: jcovezd1@its.jnj.com
+        createdAt: '2023-05-01 17:25:07'
+        modifiedAt: '2023-05-01 17:25:07'
 templates: {}
 jobs:
   jobs/JOB_MD_SER_NUM_STOCK_SGMNT:
