JEKT_1495 (Added Job) ❇️ New     - Job        - HM2_MD_MATL_UOM_JOB

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -5872,6 +5872,31 @@ jobs:
     createdAt: '2023-05-01 17:05:47'
     modifiedAt: '2023-05-01 17:12:44'
     author: ypatel8@its.jnj.com
+  jobs/HM2_MD_MATL_UOM_JOB:
+    name: HM2_MD_MATL_UOM_JOB
+    description: ''
+    fabricUID: 32
+    scheduler:
+      Databricks: {}
+    cloudProvider: null
+    jobSize: Prophecy_Small
+    scheduleCron: 0 0 0 1/1 * ? *
+    timeout: null
+    alerting:
+      emails: ''
+      onStart: false
+      onSuccess: false
+      onFailure: false
+    pipelines:
+    - pipelines/MD_SAP_MATL_UOM_MBP_SVS_P01_HCS_HMD
+    jobClusterMode:
+      clusterMode:
+        Single: {}
+      clusterId: null
+    enabled: null
+    createdAt: '2023-05-01 17:43:37'
+    modifiedAt: '2023-05-01 17:44:16'
+    author: ypatel8@its.jnj.com
 functions:
   author: null
   createdAt: '2023-03-24 15:42:34'
