JEKT-1351 🔁 Added target gem     - Pipeline        - JDE_MD_CRNCY_BW2_DEU_DJD_GMD_JET_JEM_JES_JSW_SJD     - Dataset        - MD_CRNCY

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1761,11 +1761,12 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-05-01 17:14:53'
-    modifiedAt: '2023-05-01 17:42:14'
+    modifiedAt: '2023-05-01 17:51:08'
     datasets:
       inputs:
       - datasets/DS_JDE_01_F0013
-      outputs: []
+      outputs:
+      - datasets/MD_CRNCY
     subgraphs: []
     dependencies: {}
 datasets:
@@ -1969,7 +1970,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-05-01 16:57:46'
+    modifiedAt: '2023-05-01 17:50:50'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
