--- a/src/datasets/MD_CRNCY/pbt_aspects.yml
+++ b/src/datasets/MD_CRNCY/pbt_aspects.yml
@@ -23,22 +23,22 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: CRNCY_ALT_CD
+  - name: DEC_PLACE_CNT
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: VLD_TO_DTTM
-    type: timestamp
+  - name: CRNCY_LONG_NM
+    type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: PRMRY_SAP_CRNCY_CD_ISO_CD
-    type: string
+  - name: NUM_OF_DEC_PLACES
+    type: integer
     nullable: true
     metadata:
       description: ''
