--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1067,6 +1067,23 @@ pipelines:
       - datasets/MD_MATL_UOM
     subgraphs: []
     dependencies: {}
+  pipelines/MD_SAP_MATL_UOM_ATL_BBA_BBL_BBN_BWI_FSN_GEU_MRS:
+    name: MD_SAP_MATL_UOM_ATL_BBA_BBL_BBN_BWI_FSN_GEU_MRS
+    description: MD_SAP_MATL_UOM_MBP_SVS_P01_HCS_HMD
+    author: ypatel8@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-05-01 18:00:19'
+    modifiedAt: '2023-05-01 18:04:50'
+    datasets:
+      inputs:
+      - datasets/DS_SAP_01_T006
+      - datasets/DS_SAP_01_T006A
+      outputs:
+      - datasets/MD_MATL_UOM
+    subgraphs: []
+    dependencies: {}
 datasets:
   datasets/MD_HU_SER:
     name: MD_HU_SER
@@ -2393,7 +2410,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-05-01 16:17:44'
+    modifiedAt: '2023-05-01 18:04:50'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
