JEKT-1495 (Updated pipeline config) 🔁 Modified     - Pipeline        - MD_SAP_MATL_UOM_ATL_BBA_BBL_BBN_BWI_FSN_GEU_MRS

--- a/src/pipelines/MD_SAP_MATL_UOM_ATL_BBA_BBL_BBN_BWI_FSN_GEU_MRS/pbt_aspects.yml
+++ b/src/pipelines/MD_SAP_MATL_UOM_ATL_BBA_BBL_BBN_BWI_FSN_GEU_MRS/pbt_aspects.yml
@@ -1,10 +1,12 @@
 version: 1
 configurations:
-- MBP
-- HMD
-- P01
+- GEU
+- FSN
+- ATL
+- BBA
+- BBL
+- MRS
 - default
-- HCS
-- HM2
-- SVS
+- BBN
+- BWI
 dependencies: []
