JEKT-1495 (Updated Jobs) 🔁 Modified     - Job        - JOB_MD_MATL_UOM        - HM2_MD_MATL_UOM_JOB

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -5866,7 +5866,7 @@ jobs:
     author: mbolado1@its.jnj.com
   jobs/JOB_MD_MATL_UOM:
     name: JOB_MD_MATL_UOM
-    description: ''
+    description: JOB_MD_MATL_UOM
     fabricUID: 32
     scheduler:
       Databricks: {}
@@ -5881,17 +5881,18 @@ jobs:
       onFailure: false
     pipelines:
     - pipelines/MD_SAP_MATL_UOM_MBP_SVS_P01_HCS_HMD
+    - pipelines/MD_SAP_MATL_UOM_ATL_BBA_BBL_BBN_BWI_FSN_GEU_MRS
     jobClusterMode:
       clusterMode:
         Single: {}
       clusterId: null
     enabled: null
     createdAt: '2023-05-01 17:05:47'
-    modifiedAt: '2023-05-01 17:12:44'
+    modifiedAt: '2023-05-01 18:59:31'
     author: ypatel8@its.jnj.com
   jobs/HM2_MD_MATL_UOM_JOB:
     name: HM2_MD_MATL_UOM_JOB
-    description: ''
+    description: HM2_MD_MATL_UOM_JOB
     fabricUID: 32
     scheduler:
       Databricks: {}
@@ -5912,7 +5913,7 @@ jobs:
       clusterId: null
     enabled: null
     createdAt: '2023-05-01 17:43:37'
-    modifiedAt: '2023-05-01 17:44:16'
+    modifiedAt: '2023-05-01 18:43:32'
     author: ypatel8@its.jnj.com
 functions:
   author: null
