--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1719,6 +1719,22 @@ pipelines:
       - datasets/MD_SLS_ORDR
     subgraphs: []
     dependencies: {}
+  pipelines/SAP_01_MD_SLS_ORDR_BBA_BBL_BBN_BWI_TAI_GEU_HCS_MRS_P01_MBP_SVS_FSN:
+    name: SAP_01_MD_SLS_ORDR_BBA_BBL_BBN_BWI_TAI_GEU_HCS_MRS_P01_MBP_SVS_FSN
+    description: ''
+    author: lsorarra@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-05-01 19:17:50'
+    modifiedAt: '2023-05-01 20:21:41'
+    datasets:
+      inputs:
+      - datasets/DS_SAP_01_VBAK
+      outputs:
+      - datasets/MD_SLS_ORDR
+    subgraphs: []
+    dependencies: {}
 datasets:
   datasets/MD_HU_SER:
     name: MD_HU_SER
@@ -4935,7 +4951,7 @@ datasets:
     description: ''
     author: jcovezd1@its.jnj.com
     createdAt: '2023-03-31 18:51:09'
-    modifiedAt: '2023-04-12 18:28:45'
+    modifiedAt: '2023-05-01 20:08:18'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
