JEKT-1421: added two sap subsystems: BBA, BBL , adapted config two new subsystems requirements 🔁 Modified     - Pipeline        - sap_md_doc_itm_incm_invc_hm2

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1597,7 +1597,7 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-26 18:25:43'
-    modifiedAt: '2023-04-27 19:51:03'
+    modifiedAt: '2023-05-01 20:14:41'
     datasets:
       inputs:
       - datasets/DS_SAP_RSEG
@@ -7284,6 +7284,10 @@ functions:
   expressions: {}
 subgraphs: {}
 sqlModels: {}
+sqlMacros: {}
+sqlSeeds: {}
+sqlSources: {}
+sqlUnreferencedSources: {}
 sqlPipeline: null
 dependencies: []
 projectDependencies: {}
