JEKT-1495 (Updated Job Names) 🔁 Modified     - Job        - JOB_MD_MATL_UOM_JOB        - JOB_MD_MATL_UOM_HM2

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -5865,8 +5865,8 @@ jobs:
     modifiedAt: '2023-04-10 16:03:41'
     author: mbolado1@its.jnj.com
   jobs/JOB_MD_MATL_UOM:
-    name: JOB_MD_MATL_UOM
-    description: JOB_MD_MATL_UOM
+    name: JOB_MD_MATL_UOM_JOB
+    description: JOB_MD_MATL_UOM_JOB
     fabricUID: 32
     scheduler:
       Databricks: {}
@@ -5888,11 +5888,11 @@ jobs:
       clusterId: null
     enabled: null
     createdAt: '2023-05-01 17:05:47'
-    modifiedAt: '2023-05-01 18:59:31'
+    modifiedAt: '2023-05-01 20:26:31'
     author: ypatel8@its.jnj.com
   jobs/HM2_MD_MATL_UOM_JOB:
-    name: HM2_MD_MATL_UOM_JOB
-    description: HM2_MD_MATL_UOM_JOB
+    name: JOB_MD_MATL_UOM_HM2
+    description: JOB_MD_MATL_UOM_HM2
     fabricUID: 32
     scheduler:
       Databricks: {}
@@ -5913,7 +5913,7 @@ jobs:
       clusterId: null
     enabled: null
     createdAt: '2023-05-01 17:43:37'
-    modifiedAt: '2023-05-01 18:43:32'
+    modifiedAt: '2023-05-01 20:27:10'
     author: ypatel8@its.jnj.com
 functions:
   author: null
