--- a/src/datasets/MD_MATL_UOM/pbt_aspects.yml
+++ b/src/datasets/MD_MATL_UOM/pbt_aspects.yml
@@ -192,7 +192,7 @@ schema:
       mappings: []
       tags: []
   - name: DIM_TEXT
-    type: void
+    type: string
     nullable: true
     metadata:
       description: ''
