--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1084,6 +1084,21 @@ pipelines:
       - datasets/MD_MATL_UOM
     subgraphs: []
     dependencies: {}
+  pipelines/JDE_MD_MATL_UOM_JET_JES_JEM_JSW_BW2_DJD_SJD_DEU_GMD_MTR:
+    name: JDE_MD_MATL_UOM_JET_JES_JEM_JSW_BW2_DJD_SJD_DEU_GMD_MTR
+    description: ''
+    author: ypatel8@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-05-01 20:46:31'
+    modifiedAt: '2023-05-01 20:52:55'
+    datasets:
+      inputs: []
+      outputs:
+      - datasets/MD_MATL_UOM
+    subgraphs: []
+    dependencies: {}
 datasets:
   datasets/MD_HU_SER:
     name: MD_HU_SER
@@ -2410,7 +2425,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-05-01 18:04:50'
+    modifiedAt: '2023-05-01 20:46:38'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
