JEKT-1495 (Updated Pipeline Setting) 🔁 Modified     - Pipeline        - JDE_MD_MATL_UOM_JET_JES_JEM_JSW_BW2_DJD_SJD_DEU_GMD_MTR

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1086,13 +1086,13 @@ pipelines:
     dependencies: {}
   pipelines/JDE_MD_MATL_UOM_JET_JES_JEM_JSW_BW2_DJD_SJD_DEU_GMD_MTR:
     name: JDE_MD_MATL_UOM_JET_JES_JEM_JSW_BW2_DJD_SJD_DEU_GMD_MTR
-    description: ''
+    description: JDE_MD_MATL_UOM_JET_JES_JEM_JSW_BW2_DJD_SJD_DEU_GMD_MTR
     author: ypatel8@its.jnj.com
     mode: batch
     artefactID: ''
     language: python
     createdAt: '2023-05-01 20:46:31'
-    modifiedAt: '2023-05-01 20:52:55'
+    modifiedAt: '2023-05-01 20:56:09'
     datasets:
       inputs: []
       outputs:
