JEKT-1209 Created new JDE Pipeline, initial F0005 gems and default config 🔁 Modified     - Pipeline        - MD_MATL_ALT_UOM_ATL_BBA_BBL_BBN_BWI_FSN_GEU_HCS_MBP_MRS_P01_SVS_TAI        - SAP_MD_MATL_HM2     - Dataset        - MD_MATL
❇️ New
    - Dataset
       - DS_JDE_01_F0005_41
    - Pipeline
       - JDE_MD_MATL

--- a/src/datasets/MD_MATL/pbt_aspects.yml
+++ b/src/datasets/MD_MATL/pbt_aspects.yml
@@ -619,7 +619,7 @@ schema:
       mappings: []
       tags: []
   - name: SER_TYPE
-    type: string
+    type: integer
     nullable: true
     metadata:
       description: ''
